thomijasir.rust-axum-boilerplate.5b008f3a6d16feabe21158a2c200f5b68bef8a40
Running as unit: run-p559614-i13140074.scope; invocation ID: 2649810f7225454193e0620b39016409
 Downloading crates ...
  Downloaded axum_typed_multipart v0.13.2 (registry `tuna`)
  Downloaded utoipa-swagger-ui v5.0.0 (registry `tuna`)
  Downloaded axum_typed_multipart_macros v0.13.2 (registry `tuna`)
   Compiling proc-macro2 v1.0.93
   Compiling unicode-ident v1.0.17
   Compiling libc v0.2.174
    Checking cfg-if v1.0.0
   Compiling autocfg v1.4.0
   Compiling version_check v0.9.5
    Checking smallvec v1.14.0
    Checking once_cell v1.20.3
    Checking itoa v1.0.14
   Compiling serde v1.0.218
   Compiling shlex v1.3.0
    Checking memchr v2.7.4
   Compiling typenum v1.18.0
   Compiling cc v1.2.15
    Checking log v0.4.26
    Checking pin-project-lite v0.2.16
   Compiling parking_lot_core v0.9.10
   Compiling lock_api v0.4.12
   Compiling generic-array v0.14.7
    Checking scopeguard v1.2.0
    Checking bytes v1.10.0
    Checking futures-core v0.3.31
   Compiling slab v0.4.9
    Checking tracing-core v0.1.33
    Checking stable_deref_trait v1.2.0
    Checking futures-task v0.3.31
   Compiling quote v1.0.38
    Checking fnv v1.0.7
    Checking futures-io v0.3.31
    Checking pin-utils v0.1.0
    Checking equivalent v1.0.2
   Compiling syn v2.0.98
    Checking socket2 v0.5.10
    Checking mio v1.0.3
    Checking signal-hook-registry v1.4.2
    Checking byteorder v1.5.0
    Checking parking_lot v0.12.3
    Checking hashbrown v0.15.2
    Checking http v1.2.0
    Checking writeable v0.5.5
    Checking bitflags v2.8.0
    Checking litemap v0.7.4
   Compiling vcpkg v0.2.15
    Checking percent-encoding v2.3.1
   Compiling pkg-config v0.3.32
    Checking futures-sink v0.3.31
   Compiling num-traits v0.2.19
    Checking ryu v1.0.19
   Compiling httparse v1.10.0
    Checking base64 v0.22.1
    Checking http-body v1.0.1
   Compiling strsim v0.11.1
   Compiling serde_json v1.0.139
   Compiling ident_case v1.0.1
    Checking icu_locid_transform_data v1.5.0
   Compiling openssl-sys v0.9.106
    Checking tower-service v0.3.3
    Checking form_urlencoded v1.2.1
    Checking atomic-waker v1.1.2
    Checking subtle v2.6.1
    Checking mime v0.3.17
    Checking httpdate v1.0.3
    Checking try-lock v0.2.5
   Compiling getrandom v0.3.1
    Checking icu_properties_data v1.5.0
    Checking want v0.3.1
    Checking getrandom v0.2.15
    Checking futures-channel v0.3.31
    Checking sync_wrapper v1.0.2
    Checking icu_normalizer_data v1.5.0
    Checking foreign-types-shared v0.1.1
   Compiling heck v0.5.0
   Compiling aho-corasick v1.1.3
    Checking write16 v1.0.0
    Checking utf16_iter v1.0.5
   Compiling regex-syntax v0.8.5
    Checking utf8_iter v1.0.4
    Checking tower-layer v0.3.3
   Compiling openssl v0.10.71
    Checking foreign-types v0.3.2
   Compiling proc-macro-error-attr v1.0.4
   Compiling syn v1.0.109
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
   Compiling adler2 v2.0.0
   Compiling native-tls v0.2.14
   Compiling rustversion v1.0.19
    Checking ipnet v2.11.0
   Compiling option-ext v0.2.0
   Compiling dirs-sys v0.5.0
   Compiling miniz_oxide v0.8.5
    Checking num-integer v0.1.46
   Compiling crc32fast v1.4.2
   Compiling psm v0.1.25
   Compiling proc-macro-error-attr2 v2.0.0
   Compiling multer v3.1.0
   Compiling ahash v0.8.11
   Compiling proc-macro-error v1.0.4
    Checking encoding_rs v0.8.35
   Compiling num-conv v0.1.0
   Compiling same-file v1.0.6
   Compiling time-core v0.1.2
    Checking cpufeatures v0.2.17
    Checking powerfmt v0.2.0
    Checking openssl-probe v0.1.6
   Compiling thiserror v2.0.11
   Compiling sha2 v0.10.8
    Checking deranged v0.3.11
   Compiling time-macros v0.2.19
   Compiling regex-automata v0.4.9
   Compiling walkdir v2.5.0
   Compiling flate2 v1.1.1
    Checking num-bigint v0.4.6
   Compiling dirs v6.0.0
    Checking rand_core v0.6.4
   Compiling stacker v0.1.20
   Compiling libm v0.2.11
   Compiling crossbeam-utils v0.8.21
   Compiling unicase v2.8.1
   Compiling rustix v0.38.44
    Checking utf8parse v0.2.2
    Checking spin v0.9.8
    Checking anstyle-parse v0.2.6
   Compiling zip v0.6.6
   Compiling mime_guess v2.0.5
    Checking time v0.3.37
   Compiling shellexpand v3.1.1
   Compiling rust-embed-utils v8.7.0
   Compiling synstructure v0.13.1
   Compiling darling_core v0.20.10
   Compiling proc-macro-error2 v2.0.1
    Checking rand_core v0.9.3
   Compiling ring v0.17.11
   Compiling bigdecimal v0.4.8
   Compiling thiserror v1.0.69
   Compiling regex v1.11.1
    Checking fastrand v2.3.0
    Checking linux-raw-sys v0.4.15
    Checking matchit v0.7.3
    Checking anstyle-query v1.1.2
    Checking iana-time-zone v0.1.61
   Compiling anyhow v1.0.98
    Checking colorchoice v1.0.3
    Checking is_terminal_polyfill v1.70.1
    Checking lazy_static v1.5.0
    Checking anstyle v1.0.10
   Compiling pq-sys v0.7.0
    Checking overload v0.1.1
    Checking allocator-api2 v0.2.21
   Compiling either v1.13.0
    Checking nu-ansi-term v0.46.0
    Checking anstream v0.6.18
    Checking sharded-slab v0.1.7
   Compiling utoipa-swagger-ui v5.0.0
   Compiling diesel_table_macro_syntax v0.2.0
   Compiling serde_derive v1.0.218
   Compiling zerofrom-derive v0.1.5
   Compiling yoke-derive v0.7.5
   Compiling futures-macro v0.3.31
   Compiling zerovec-derive v0.10.3
    Checking futures-util v0.3.31
   Compiling tokio-macros v2.5.0
   Compiling displaydoc v0.2.5
   Compiling tracing-attributes v0.1.28
    Checking zerofrom v0.1.5
    Checking tokio v1.43.0
    Checking yoke v0.7.5
   Compiling zerocopy-derive v0.7.35
   Compiling icu_provider_macros v1.5.0
    Checking zerovec v0.10.4
   Compiling darling_macro v0.20.10
   Compiling darling v0.20.10
   Compiling openssl-macros v0.1.1
    Checking zerocopy v0.7.35
    Checking tracing v0.1.41
   Compiling thiserror-impl v2.0.11
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking ppv-lite86 v0.2.20
    Checking icu_locid v1.5.0
    Checking http-body-util v0.1.2
   Compiling async-trait v0.1.86
    Checking icu_provider v1.5.0
    Checking rand_chacha v0.9.0
    Checking hashbrown v0.14.5
   Compiling dsl_auto_type v0.1.3
    Checking icu_locid_transform v1.5.0
   Compiling utoipa-gen v4.3.1
   Compiling rust-embed-impl v8.7.0
    Checking axum-core v0.4.5
    Checking icu_properties v1.5.1
   Compiling thiserror-impl v1.0.69
    Checking scheduled-thread-pool v0.2.7
    Checking tracing-log v0.2.0
    Checking thread_local v1.1.8
    Checking base64ct v1.6.0
    Checking winnow v0.7.11
    Checking untrusted v0.9.0
    Checking iri-string v0.7.8
    Checking toml_write v0.1.2
    Checking tokio-util v0.7.13
    Checking tokio-native-tls v0.3.1
    Checking icu_normalizer v1.5.0
    Checking clap_lex v0.7.4
    Checking indexmap v2.9.0
    Checking tower v0.5.2
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
    Checking serde_urlencoded v0.7.1
    Checking url v2.5.4
    Checking h2 v0.4.11
    Checking serde_path_to_error v0.1.16
    Checking toml_datetime v0.6.11
    Checking serde_spanned v0.6.9
    Checking chrono v0.4.39
   Compiling ubyte v0.10.4
    Checking zeroize v1.8.1
    Checking tower-http v0.6.6
    Checking rustls-pki-types v1.12.0
   Compiling axum_typed_multipart_macros v0.13.2
    Checking toml_edit v0.22.27
    Checking clap_builder v4.5.30
   Compiling validator_derive v0.19.0
    Checking password-hash v0.5.0
    Checking crossbeam-channel v0.5.14
    Checking tracing-subscriber v0.3.19
    Checking r2d2 v0.8.10
    Checking chumsky v0.9.3
    Checking rust-embed v8.7.0
   Compiling diesel_derives v2.2.3
    Checking utoipa v4.2.3
    Checking simple_asn1 v0.6.3
    Checking rand v0.9.1
    Checking rand_chacha v0.3.1
    Checking tempfile v3.17.1
   Compiling clap_derive v4.5.28
    Checking blake2 v0.10.6
    Checking email-encoding v0.4.0
    Checking pem v3.0.5
    Checking hyper v1.6.0
    Checking hostname v0.4.0
    Checking nom v8.0.0
    Checking email_address v0.2.9
    Checking uuid v1.14.0
    Checking quoted_printable v0.5.1
    Checking argon2 v0.5.3
    Checking jsonwebtoken v9.3.1
    Checking toml v0.8.23
    Checking validator v0.19.0
    Checking ulid v1.2.1
    Checking rand v0.8.5
    Checking tracing-appender v0.2.3
    Checking dotenv v0.15.0
    Checking hyper-util v0.1.14
    Checking clap v4.5.30
    Checking diesel v2.2.7
    Checking axum v0.7.9
    Checking hyper-tls v0.6.0
    Checking reqwest v0.12.22
    Checking axum_typed_multipart v0.13.2
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.7/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking lettre v0.11.15
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
